# ros2-service-client-server

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/my_service_interfaces/include/my_service_interfaces/my_service_interfaces/msg/: rosidl_generator_cpp__visibility_control.hpp  (+2 more)
install/my_service_interfaces/share/my_service_interfaces/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/my_service_interfaces/share/my_service_interfaces/cmake/: ament_cmake_export_libraries-extras.cmake  export_my_service_interfaces__rosidl_generator_cExport-noconfig.cmake  export_my_service_interfaces__rosidl_generator_pyExport-noconfig.cmake  export_my_service_interfaces__rosidl_generator_pyExport.cmake  export_my_service_interfaces__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_my_service_interfaces__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  my_service_interfacesConfig.cmake  my_service_interfaces__rosidl_typesupport_cExport.cmake  my_service_interfaces__rosidl_typesupport_cppExport-noconfig.cmake  my_service_interfaces__rosidl_typesupport_cppExport.cmake
install/my_service_interfaces/share/my_service_interfaces/srv/: ResetCounter.idl
install/my_service_pkg/lib/my_service_pkg/: reset_counter_client  reset_counter_server
install/my_service_pkg/share/my_service_pkg/: package.sh
log/: latest_build
src/my_service_interfaces/: CMakeLists.txt
src/my_service_pkg/: package.xml  setup.py
src/my_service_pkg/my_service_pkg/: reset_counter_client.py  reset_counter_server.py
(+14 files in other folders)
