<?xml version="1.0"?>

<package format="3">

  <name>my_service_pkg</name>

  <version>0.0.0</version>

  <description>ROS2 service client/server package</description>

  <maintainer email="omkarhonrao108@gmail.com">omi</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>

  <depend>my_service_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
